What's New for PSPRadio 
========================

0.37-pre8
BUG FIXES
(sandberg) Core: Updated to use socket headers from the new pspsdk.
NEW FEATURES

0.37-pre7 (r641)
BUG FIXES:
(raf) Corrected logging timestamping, now using localtime (inspired by sandberg's code).
NEW FEATURES:
(raf) TextUI: -2 in the X position for configuration items makes the item not be printed (suggested by HalfastII)
(raf) TextUI: The config file is now partitioned into one section per screen (suggested by HalfastII)
(raf) TextUI: Added support for showing the time and the battery level.

0.37-pre6 (r634)
BUG FIXES:
(raf) Core: Logging instantiated in the heap instead of the data segment.
(raf) Core: Modifications to make it compatible with the latest pspsdk (r1542)
(raf) Playback: Corrected bug that caused app to crash when a stream failed.
(raf) TextUI: Made the title shorter so it fits no matter what font is used.
(sandberg) Updated the 3D UI so all options are fitted to the screen.
NEW FEATURES:
(raf) TextUI: Now files defined in playlists are displayed without the path, and the extension is only shown if configured to in the config file.
(raf) Compiled against latest pspsdk (r1542). There should be some speed improvements, as things like memcpy are now optimized.
(raf) Core/TextUI: Added support to print text using pixel coordinates
(raf) TexUI: Removed cleaning code that was unnecessary in the options screen renderer. This should speed it up a bit.
(sandberg) Added support for showing the time and the battery level on the 3D UI.

0.37-pre5 (r623) (12-06-2005)
(raf) Enabled pausing of local streams
(raf) Cleanup/robustness added for play/stop core.
(raf) Corrected log times now that clock changed in sdk
(raf) Created playmodes; defaults to NORMAL (will play next track after current one ends), also has SINGLE and REPEAT modes.
(raf) Completely re-wrote buffering system. (Using stl lists, and optimized buffers). New change from one stream to the next is seamless.