@@ -17,8 +17,9 @@ MAIN_THREAD_PRIO=20;
 DECODE_THREAD_PRIO=64;
 PLAY_THREAD_PRIO=16;
 SOUND_BUFFERSIZE=50;
-; PSPRADIO_SCREEN_PLAYLIST 				0
-; PSPRADIO_SCREEN_SHOUTCAST_BROWSER		1
+; PSPRADIO_SCREEN_LOCALFILES			0
+; PSPRADIO_SCREEN_PLAYLIST 				1
+; PSPRADIO_SCREEN_SHOUTCAST_BROWSER		2
 INITIAL_SCREEN=0;
 CPUFREQ=222;
 USB_AUTOSTART=0;
