@@ -18,9 +18,9 @@ FONT_MODE=1;
 FONT_WIDTH=8;
 FONT_HEIGHT=10;
 ;Lists
-CONTAINERLIST_X_RANGE=7,126;
+CONTAINERLIST_X_RANGE=7,127;
 CONTAINERLIST_Y_RANGE=112,224;
-ENTRIESLIST_X_RANGE=147,469;
+ENTRIESLIST_X_RANGE=147,475;
 ENTRIESLIST_Y_RANGE=112,224;
 LISTS_TITLE_COLOR=33CC33;
 ENTRIESLIST_COLOR=888888;
@@ -61,9 +61,9 @@ FG_COLOR=FFFFFF;
 FONT_MODE=1;
 FONT_WIDTH=8;
 FONT_HEIGHT=10;
-CONTAINERLIST_X_RANGE=7,126;
+CONTAINERLIST_X_RANGE=7,127;
 CONTAINERLIST_Y_RANGE=112,224;
-ENTRIESLIST_X_RANGE=147,469;
+ENTRIESLIST_X_RANGE=147,475;
 ENTRIESLIST_Y_RANGE=112,224;
 LISTS_TITLE_COLOR=33CC33;
 ENTRIESLIST_COLOR=888888;
